move labels on top

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -19,14 +19,14 @@
                     type="text"
                     required
                     minlength="2"
-                    placeholder=" "
+                    placeholder="name"
                   />
                   <span class="contacts-form-label">Имя&ast;</span>
                   <!-- <svg class="contacts-form-icon" width="20" height="20">
                     <use class="icon-check" href="./img/sprite.svg#icon-check"></use>
                     <use class="icon-alert" href="./img/sprite.svg#icon-alert"></use>
                   </svg> -->
-                  <span class="message-alert">Minimum two characters</span>
+                  <!-- <span class="message-alert">Minimum two characters</span> -->
                 </label>
                 <label class="contacts-form-field">
                   <input
@@ -35,7 +35,7 @@
                     type="tel"
                     id="user-phone"
                     required
-                    placeholder=" "
+                    placeholder="+38066122333 "
                   />
                   <span class="contacts-form-label">Телефон&ast;</span>
                 </label>
