--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,10 +1,10 @@
-:root{
-    --accent-color: #FF6B09;
-    --white-color: #FFFFFF;
-    --title-color: #111518;
-    --main-background: #F1F1F1;
-    --secondary-background: #111518;
-    --main-text-color: #B9B9B9;
-    --secondary-text-color: #3D3D3D;  
-    --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+:root {
+  --accent-color: #ff6b09;
+  --white-color: #ffffff;
+  --title-color: #111518;
+  --main-background: #f1f1f1;
+  --secondary-background: #111518;
+  --main-text-color: #b9b9b9;
+  --secondary-text-color: #3d3d3d;
+  --animation: 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
