--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero section">
     <div class="container hero-container">
         <div class="hero-position">
             <h1 class="hero__title">
