--- a/src/sass/components/_reviews.scss
+++ b/src/sass/components/_reviews.scss
@@ -98,7 +98,7 @@
     
     @include mq(desk){
         font-size: 18px;
-        line-height: 1.58;
+        line-height:calc(28 / 18);
     }
 }
 // ------------------------read more button--------------------------------
@@ -114,6 +114,10 @@
     background-color: transparent;
 
     border: none;
+    @include mq(desk){
+        font-size: 18px;
+    line-height: calc(28 / 18);
+    }
 }
 .read-more-state {
     display: none;
