--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -127,7 +127,7 @@
 
         @media screen and (min-width: 200px) {
             width: 208px;
-            margin: 0 auto 67px;
+            margin: 0 auto;
         }
 
         @include mq(tab) {
