--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,21 +1,19 @@
 <footer class="footer">
-    <ul class="footer__list">
-        <li class="footer__logo">
-            <svg class="footer__logo-svg" width="80px" height="24px">
+    <div class="">
+        <div class="footer__container">
+            <svg class="footer__logo-svg">
                 <use href="./images/sprite.svg#logo-black"></use>
-              </svg>
-        </li>
-        <li class="footer__tel">
-            <a href="tel:+380991234567"class="footer__text">
-            <svg class="footer__tel-svg" width="20px" height="20px">
+            </svg>
+            <div class="footer__container-tel">
+                <a href="tel:+380991234567"class="footer__text">
+                <svg class="footer__tel-svg">
                 <use href="./images/sprite.svg#phone"></use>
-            </svg>+38 (099) 123 45 67 </a>
-        </li>
-        <li class="footer__insta">
-            <a href=""><img class="footer__insta-pic" src="./images/instagram.svg"/></a> 
-        </li>
-    </ul>
-    <div class="footer__down">
-        <h2 class="footer__title-down">&copy; All rights reserved, 2022</h2>
+                </svg><span class="number-tel">+38 (099) 123 45 67</span></a>
+                <a href="" class="footer__link"><img class="footer__insta-pic" src="./images/instagram-webp.webp"/></a> 
+            </div>
+        </div>
+        <div class="footer__down">
+            <h2 class="footer__title-down">&copy; All rights reserved, 2022</h2>
+        </div>
     </div>
-     </footer>
+</footer>
