add centre of btn

--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -204,6 +204,9 @@
 // базовые стили кнопки переписать
 .btn {
   margin-top: 55px;
+  margin-right: 10px;
+  margin-left: 10px;
+
   //   display: inline-flex;
   //   align-items: center;
   height: 48px;
