--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -18,7 +18,8 @@
                     name="user-name"
                     type="text"
                   
-                   required pattern="^[a-zA-Z]+\s[a-zA-Z]+$"
+                   required pattern="^[a-zA-Z]+\s$"
+                   title="Username must be two words separated by space."
 
                     placeholder="name"
                   />
@@ -27,7 +28,7 @@
                     <use class="icon-check" href="./img/sprite.svg#icon-check"></use>
                     <use class="icon-alert" href="./img/sprite.svg#icon-alert"></use>
                   </svg> -->
-                  <span class="message-alert">Minimum two characters</span>
+                  <!-- <span class="message-alert">Minimum two characters</span> -->
                 </label>
                 <label class="contacts-form-field">
                   <input
