--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -3,6 +3,13 @@
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 100;
+
+  background-color: #ffffff;
+
+  -webkit-box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
+  -moz-box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
+  box-shadow: 0px 5px 5px -5px rgba(34, 60, 80, 0.6);
 }
 
 .header-container {
@@ -10,7 +17,7 @@
     align-items: center;
     display: flex;
 
-    padding-top: 30px;
+    padding: 15px 20px;
 }
 .menu-mobile__wrapper{
     justify-content: start;
@@ -142,6 +149,11 @@
   letter-spacing: 0.03em;
 
   color:var(--white-color);
+
+  &.active{
+    color: var(--accent-color);
+  }
+
   @include mq(tab){
     font-size: 26px;
   }
