--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -42,69 +42,129 @@
       background-image: url(../images/contacts/registration-bg_lg@2x.png);
     }
   }
+}
+.contacts-title {
+  // margin-top: 55px;
+  min-width: 280px;
+  margin-bottom: 25px;
+  margin-right: auto;
+  margin-left: auto;
 
-  .contacts-title {
-    // margin-top: 55px;
-    margin-bottom: 25px;
-    font-weight: 800;
-    font-size: 14px;
-    line-height: 1.3;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 1.3;
 
-    text-align: center;
-    letter-spacing: 0.03em;
+  text-align: center;
+  letter-spacing: 0.03em;
 
-    color: var(--white-color);
+  color: var(--white-color);
+
+  @include mq(tab) {
+    min-width: 625px;
+    font-size: 26px;
+    line-height: calc(34 / 26);
   }
 
-  .contacts-subtitle {
-    margin-bottom: 43px;
+  @include mq(desk) {
+    min-width: 980px;
+    margin-bottom: 50px;
 
-    font-weight: 600;
-    font-size: 12px;
-    line-height: calc(15 / 12);
-    text-align: center;
-    letter-spacing: 0.08em;
+    font-size: 46px;
+    line-height: calc(60 / 46);
+  }
+}
 
-    color: var(--white-color);
+.contacts-subtitle {
+  min-width: 280px;
+  margin-bottom: 43px;
+  margin-right: auto;
+  margin-left: auto;
+
+  font-weight: 600;
+  font-size: 12px;
+  line-height: calc(15 / 12);
+  text-align: center;
+  letter-spacing: 0.08em;
+
+  color: var(--white-color);
+
+  @include mq(tab) {
+    min-width: 545px;
+    margin-bottom: 40px;
+
+    font-size: 16px;
+    line-height: calc(20 / 16);
   }
 
-  .contacts-form {
-    width: 280px;
-    margin-right: auto;
-    margin-left: auto;
-    // padding-right: 20px;
-    // padding-left: 20px;
+  @include mq(desk) {
+    min-width: 1090px;
+    margin-bottom: 56px;
+
+    font-size: 30px;
+    line-height: calc(37 / 30);
   }
+}
 
-  .contacts-form-group {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
+.contacts-form {
+  width: 280px;
+  margin-right: auto;
+  margin-left: auto;
 
-    // margin-bottom: 50px;
-  }
+  // padding-right: 20px;
+  // padding-left: 20px;
+}
 
-  .contacts-form-field {
-    position: relative;
-  }
+// .contacts-form-group {
+//   display: block;
+//   flex-direction: column;
+//   &:not(:last-child) {
+//     margin-bottom: 20px;
+//   }
+//   // gap: 20px;
 
-  .contacts-form-input {
-    width: 100%;
-    height: 48px;
-    padding-left: 28px;
-    padding-right: 20px;
+//   // margin-bottom: 50px;
+// }
 
-    font-weight: 600;
-    font-size: 14px;
-    line-height: calc(17 / 14);
-    letter-spacing: 0.08em;
-    color: var(--white-color);
-    background-color: transparent;
-    border: 1px solid var(--white-color);
+.contacts-form-field {
+  position: relative;
+  display: block;
+}
 
-    outline: transparent;
-    transition: border-color var(--animation); //which color of border
-  }
+// .contacts-form-field:first-child {
+//   background-color: green;
+//   margin-bottom: 20px;
+// }
+
+// .contacts-form-field:last-child {
+//   display: block;
+//   background-color: red;
+//   color: red;
+//   margin-bottom: 50px;
+// }
+
+.contacts-form-group {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 50px;
+}
+
+.contacts-form-input {
+  width: 100%;
+  height: 48px;
+  padding-left: 28px;
+  padding-right: 20px;
+
+  font-weight: 600;
+  font-size: 14px;
+  line-height: calc(17 / 14);
+  letter-spacing: 0.08em;
+  color: var(--white-color);
+  background-color: transparent;
+  border: 1px solid var(--white-color);
+
+  outline: transparent;
+  transition: border-color var(--animation); //which color of border
 }
 
 .contacts-form-input:focus,
@@ -203,9 +263,10 @@
 
 // базовые стили кнопки переписать
 .btn {
-  margin-top: 55px;
+  //   margin-top: 55px;
   margin-right: 10px;
   margin-left: 10px;
+  //   margin-top: 35px;
 
   //   display: inline-flex;
   //   align-items: center;
