--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -1,4 +1,4 @@
-<section class="program">
+<section class="program section">
     <div class="container program-container">
         <h2 class="program-title">Our program</h2>
         <ul class="program-list">
@@ -189,11 +189,16 @@
             </li>
             <div>
                 <img class="program__img" srcset="
-        ./images/program/program-mob.png 320w,
         ./images/program/program-bg.png 768w,
         ./images/program/program-bg2x.png 1366w" sizes="(min-witdth: 1366px) 1366w, 
                     (min-witdth: 768px) 768w, 
                     (min-witdth: 320px) 320w, 100vw" src="./images/program/program-bg.png" alt="hero" />
+
+                <img class="program-mob__img" srcset="
+                    ./images/program/program-mob.png 320w,
+                    ./images/program/program-mobx2.png 768w" sizes="(min-witdth: 768px) 768w, 
+                            (min-witdth: 320px) 320w, 100vw" src="./images/program/program-mob.png" alt="hero" />
+
             </div>
         </ul>
     </div>
