add <br> for mobile

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -6,8 +6,8 @@
     </h2>
     <h3 class="contacts-subtitle">
       Leave a request for participation in a
-      <span class="active">free lesson</span>. A consultant will contact you and
-      answer your questions
+      <span class="active"><br class="br-none" />free lesson</span>. <br />A
+      consultant will contact you and answer your questions
     </h3>
     <form class="contacts-form" name="contact-form">
       <div class="contacts-form-group">
