--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -54,7 +54,7 @@
   }
 }
 .contacts-title {
-  min-width: 280px;
+  max-width: 280px;
   margin-bottom: 25px;
   margin-right: auto;
   margin-left: auto;
@@ -69,13 +69,13 @@
   color: var(--white-color);
 
   @include mq(tab) {
-    min-width: 625px;
+    max-width: 625px;
     font-size: 26px;
     line-height: calc(34 / 26);
   }
 
   @include mq(desk) {
-    min-width: 980px;
+    max-width: 980px;
     margin-bottom: 50px;
 
     font-size: 46px;
@@ -84,7 +84,7 @@
 }
 
 .contacts-subtitle {
-  min-width: 280px;
+  max-width: 280px;
   margin-bottom: 43px;
   margin-right: auto;
   margin-left: auto;
@@ -98,7 +98,7 @@
   color: var(--white-color);
 
   @include mq(tab) {
-    min-width: 545px;
+    max-width: 545px;
     margin-bottom: 40px;
 
     font-size: 16px;
@@ -106,11 +106,20 @@
   }
 
   @include mq(desk) {
-    min-width: 1090px;
+    max-width: 1090px;
     margin-bottom: 56px;
 
     font-size: 30px;
     line-height: calc(37 / 30);
+  }
+}
+
+.br-none {
+  @include mq(tab) {
+    display: none;
+  }
+  @include mq(desk) {
+    display: none;
   }
 }
 
