--- a/src/sass/components/_contacts.scss
+++ b/src/sass/components/_contacts.scss
@@ -13,7 +13,7 @@
     padding-bottom: 62px;
   }
 
-  max-width: 1680px; // узнать
+  //   max-width: 1680px; // узнать
   margin-left: auto;
   margin-right: auto;
 
